--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
+displayName=For Knack
+author=Not Shhhhhh
+description=Pharoah's Sceptre Renaming Tool
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.for_knack.for_knack_Plugin
